# lgtv-idle-sync

./: README.md  lgtv-idle-sync.spec  pyproject.toml
src/lgtv_idle_sync/: __main__.py  idle_monitor.py  interface.py  lgtv_idle_client.py  main.py  powermanagement_idle_inhibitor.py  powermanagement_idle_notifier.py  pulseaudio_notifier.py  wayland_idle_manager.py  wayland_idle_notifier.py
