[tool.poetry]
name = "lgtv_idle_sync"
version = "0.1.0"
description = "Sync idle state to LGTV (with alga)"
authors = ["Sander Kolman <Sandarr95@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
alga = "^2.0.1"
wakeonlan = ">= 2.0.0"
pywayland = "^0.4.18"
dbus-fast = "^2.28.0"
pulsectl_asyncio = "^1.2.2"
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
